Bug 492420. Delay a little before playing a live stream to try to reduce the likelihood we'll have to buffer. r=doublec

--HG--
extra : rebase_source : 022aa4d89644b3cfef62f95b4349932594de734f